*  Added Greetings component and Greet function *  Fixed Home nav responsive *  Added support for portrait mode on mobile on components

--- a/src/styles/reusables/_sizes.sass
+++ b/src/styles/reusables/_sizes.sass
@@ -1,6 +1,7 @@
 $header-height-desktop: 110px
 $header-height-tablet: 110px
 $header-height-mobile: 110px
+$header-height-mobile-portrait: 80px
 
 $footer-height-desktop: 12vh
 $footer-height-tablet: 12vh
